--- a/yingli/src/main/webapp/y.html
+++ b/yingli/src/main/webapp/y.html
@@ -6,6 +6,7 @@
 </head>
 <body background="file:///F:/Java/workspace/yingli/53b4OOOPICbc_1024.jpg"text="black">
 <table border="1" width="100%">
+
 <tr>
 <th><font color="black">Logo</font></th>
 <th><font color="black">Size</font></th>
@@ -15,7 +16,9 @@
 <th><font color="black">Earn</font></th>
 </tr>
 <tr>
-<td>小黑</td>
+<td><nav>
+<a href="P.html"><strong>小黑</strong></a>
+</nav></td>
 <td>L</td>
 <td>黄色</td>
 <td>1000</td>
